--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,17 @@ hw1/linear_element\.asv
 hw1/15336134_莫凡_实验一\.rar
 
 *.asv
+
+*.rar
+
+hw2/report/15336134莫凡作业二/source/
+
+hw2/report/res\.fig
+
+hw2/report/report\.synctex\.gz
+
+hw2/report/report\.log
+
+hw2/report/report\.aux
+
+hw2/report/15336134莫凡作业二/
